Video links on Home page, Tutorials page
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -2,12 +2,12 @@
   <div class="row">
       <div class="col mx-auto mb-3 pt-5">
           <h2>Get started with O3DE</h2>
-          <p>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="https://o3de.org/docs/" target="_blank">documentation</a>.</p>
+          <p>Watch our introductory tutorials on O3DE below, or dive right into O3DE's <a href="https://o3de.org/docs/" target="_blank">documentation</a>.</p>
       </div>
   </div>
   <div class="row pb-5">
     <div class="col col-12">
-      <a class="card mb-3" href="https://www.youtube.com/watch?v=CQmjAxr7LZs" target="_blank">
+      <a class="card mb-3" href="https://youtu.be/CQmjAxr7LZs" target="_blank">
         <div class="row">
           <div class="col-md-4 card-image" style="background-image: url('/img/home/what-is-o3de-video-thumbnail.jpg')"></div>
           <div class="col col-md-8">
@@ -21,6 +21,51 @@
         </div>
       </a>
     </div>
+    <div class="row pb-5">
+      <div class="col col-12">
+        <a class="card mb-3" href="https://youtu.be/CIw9UoMMeX8" target="_blank">
+          <div class="row">
+            <div class="col-md-4 card-image" style="background-image: url('/img/home/what-is-o3de-video-thumbnail.jpg')"></div>
+            <div class="col col-md-8">
+              <div class="card-body">
+                <h5 class="card-title mt-0">Setting up O3DE from GitHub</h5>
+                <p class="card-text">Let Alex guide you through forking the O3DE code from GitHub and building the engine.</p>
+                <div class="learn-more mb-3">Watch it now!</div>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="row pb-5">
+        <div class="col col-12">
+          <a class="card mb-3" href="https://youtu.be/SZC13S0YZZs" target="_blank">
+            <div class="row">
+              <div class="col-md-4 card-image" style="background-image: url('/img/home/what-is-o3de-video-thumbnail.jpg')"></div>
+              <div class="col col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title mt-0">Creating Projects Using Command Line</h5>
+                  <p class="card-text">Have your built O3DE? Now, it's time to create your first project.</p>
+                  <div class="learn-more mb-3">Watch it now!</div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="row pb-5">
+          <div class="col col-12">
+            <a class="card mb-3" href="https://youtu.be/GTJ_ie7yHdI" target="_blank">
+              <div class="row">
+                <div class="col-md-4 card-image" style="background-image: url('/img/home/what-is-o3de-video-thumbnail.jpg')"></div>
+                <div class="col col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title mt-0">Atom Renderer</h5>
+                    <p class="card-text">Want to learn what the Atom renderer is all about? Check out this video.</p>
+                    <div class="learn-more mb-3">Watch it now!</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
     <div class="col col-12">
       <a class="card mb-3" href="https://github.com/o3de/o3de.org/issues" target="_blank">
         <div class="row">
