--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -9,7 +9,7 @@
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/CQmjAxr7LZs" target="_blank">
         <div class="row">
-          <div class="col-md-4 card-image" style="background-image: url('/img/home/-video-thumbnail-what-is-o3de.jpg')"></div>
+          <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-what-is-o3de.jpg')"></div>
           <div class="col col-md-8">
             <div class="card-body">
               <h5 class="card-title mt-0">What is O3DE?</h5>
@@ -56,6 +56,22 @@
   </div>
   <div class="row pb-5">
     <div class="col col-12">
+      <a class="card mb-3" href="https://youtu.be/CQmjAxr7LZs" target="_blank">
+        <div class="row">
+          <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-developer-overview.jpg')"></div>
+          <div class="col col-md-8">
+            <div class="card-body">
+              <h5 class="card-title mt-0">O3DE Developer Preview</h5>
+              <p class="card-text">Dive deeper into the technology behind O3DE.</p>
+              <div class="learn-more mb-3">Watch it now!</div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row pb-5">
+    <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/GTJ_ie7yHdI" target="_blank">
         <div class="row">
           <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-atom-renderer.jpg')"></div>
@@ -63,6 +79,70 @@
             <div class="card-body">
               <h5 class="card-title mt-0">Atom Renderer</h5>
               <p class="card-text">Want to learn what the Atom renderer is all about? Check out this video.</p>
+              <div class="learn-more mb-3">Watch it now!</div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row pb-5">
+    <div class="col col-12">
+      <a class="card mb-3" href="https://youtu.be/EG0C9enezzo" target="_blank">
+        <div class="row">
+          <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-aws-gems.jpg')"></div>
+          <div class="col col-md-8">
+            <div class="card-body">
+              <h5 class="card-title mt-0">AWS Gems</h5>
+              <p class="card-text">Learn about the O3DE-enabled AWS cloud service Gems and how to incorporate them into your project.</p>
+              <div class="learn-more mb-3">Watch it now!</div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row pb-5">
+    <div class="col col-12">
+      <a class="card mb-3" href="https://youtu.be/FfrkHJJt_X0" target="_blank">
+        <div class="row">
+          <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-networking-overview.jpg')"></div>
+          <div class="col col-md-8">
+            <div class="card-body">
+              <h5 class="card-title mt-0">O3DE Networking Overview</h5>
+              <p class="card-text">O3DE has all-new networking features. Learn more about them!</p>
+              <div class="learn-more mb-3">Watch it now!</div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row pb-5">
+    <div class="col col-12">
+      <a class="card mb-3" href="https://youtu.be/lWhPwDYeuhc" target="_blank">
+        <div class="row">
+          <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-o3de-editor-tour.jpg')"></div>
+          <div class="col col-md-8">
+            <div class="card-body">
+              <h5 class="card-title mt-0">O3DE Editor Tour</h5>
+              <p class="card-text">Alex steps you through the most important parts of the O3DE Editor.</p>
+              <div class="learn-more mb-3">Watch it now!</div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row pb-5">
+    <div class="col col-12">
+      <a class="card mb-3" href="https://youtu.be/fTNcUV4zAgE" target="_blank">
+        <div class="row">
+          <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-script-canvas-overview.jpg')"></div>
+          <div class="col col-md-8">
+            <div class="card-body">
+              <h5 class="card-title mt-0">O3DE Script Canvas Overview</h5>
+              <p class="card-text">Learn how visual scripting works in O3DE with Script Canvas.</p>
               <div class="learn-more mb-3">Watch it now!</div>
             </div>
           </div>
