--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -5,7 +5,7 @@
           <p>Watch our introductory tutorials on O3DE below, or dive right into O3DE's <a href="https://o3de.org/docs/" target="_blank">documentation</a>.</p>
       </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/CQmjAxr7LZs" target="_blank">
         <div class="row">
@@ -22,7 +22,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/CIw9UoMMeX8" target="_blank">
         <div class="row">
@@ -38,7 +38,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/SZC13S0YZZs" target="_blank">
         <div class="row">
@@ -46,7 +46,7 @@
           <div class="col col-md-8">
             <div class="card-body">
               <h5 class="card-title mt-0">Creating Projects Using Command Line</h5>
-              <p class="card-text">Have your built O3DE? Now, it's time to create your first project.</p>
+              <p class="card-text">Have you built O3DE? Now, it's time to create your first project.</p>
               <div class="learn-more mb-3">Watch it now!</div>
             </div>
           </div>
@@ -54,7 +54,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/CQmjAxr7LZs" target="_blank">
         <div class="row">
@@ -70,7 +70,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/GTJ_ie7yHdI" target="_blank">
         <div class="row">
@@ -86,7 +86,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/EG0C9enezzo" target="_blank">
         <div class="row">
@@ -102,7 +102,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/FfrkHJJt_X0" target="_blank">
         <div class="row">
@@ -118,7 +118,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/lWhPwDYeuhc" target="_blank">
         <div class="row">
@@ -134,7 +134,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://youtu.be/fTNcUV4zAgE" target="_blank">
         <div class="row">
@@ -150,7 +150,7 @@
       </a>
     </div>
   </div>
-  <div class="row pb-3">
+  <div class="row pb-2">
     <div class="col col-12">
       <a class="card mb-3" href="https://github.com/o3de/o3de.org/issues" target="_blank">
         <div class="row">
