videos embedded on tutorials page
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -45,7 +45,7 @@
           <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-creating-projects-using-command-line.jpg')"></div>
           <div class="col col-md-8">
             <div class="card-body">
-              <h5 class="card-title mt-0">Creating Projects Using Command Line</h5>
+              <h5 class="card-title mt-0">Creating Projects Using the Command Line</h5>
               <p class="card-text">Have you built O3DE? Now, it's time to create your first project.</p>
               <div class="learn-more mb-3">Watch it now!</div>
             </div>
