--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -228,6 +228,9 @@ code
     @include media-breakpoint-down(sm)
       width: 100px
       margin-left: 10px
+  
+  #nav-search
+    margin-left: 5px
 
 
 // layouts/partials/hero.html
