Minor visual issues with video thumbnail and mobile search (#680)
* Fix issue with video images not being centered correctly in homepage. Also reduces search input width in mobile menu to prevent it from going on 2 lines.

Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

* Additional left margin on the search icon

Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -223,6 +223,16 @@ code
   max-height: 36px
   color: #FFFFFF
 
+.search
+  .form-control
+    @include media-breakpoint-down(sm)
+      width: 100px
+      margin-left: 10px
+  
+  #nav-search
+    margin-left: 5px
+
+
 // layouts/partials/hero.html
 
 //scales the header proportionally
@@ -579,6 +589,9 @@ $width: '59vw';
     color: $o3de-black
     min-height: 10rem
     overflow: hidden
+
+    .row
+      margin: 0
 
     .card-body
       padding: 1.6rem 1rem 0 0.2rem
