--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -61,7 +61,7 @@
           <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-developer-overview.jpg')"></div>
           <div class="col col-md-8">
             <div class="card-body">
-              <h5 class="card-title mt-0">O3DE Developer Preview</h5>
+              <h5 class="card-title mt-0">O3DE Developer Overview</h5>
               <p class="card-text">A developer overview visual guide for Open 3D Engine (O3DE). Dive into the O3DE project, learn how to build the engine, 
                 and submit your first pull request. </p>
               <div class="learn-more mb-3">Watch it now!</div>
