Fixes to front page videos (#683)
* Video links on Home page, Tutorials page

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* Fixes to video links

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* updated blog post date

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* title fixes

Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -56,13 +56,14 @@
   </div>
   <div class="row pb-2">
     <div class="col col-12">
-      <a class="card mb-3" href="https://youtu.be/CQmjAxr7LZs" target="_blank">
+      <a class="card mb-3" href="https://youtu.be/lWhPwDYeuhc" target="_blank">
         <div class="row">
           <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-developer-overview.jpg')"></div>
           <div class="col col-md-8">
             <div class="card-body">
-              <h5 class="card-title mt-0">O3DE Developer Preview</h5>
-              <p class="card-text">Dive deeper into the technology behind O3DE.</p>
+              <h5 class="card-title mt-0">O3DE Developer Overview</h5>
+              <p class="card-text">A developer overview visual guide for Open 3D Engine (O3DE). Dive into the O3DE project, learn how to build the engine, 
+                and submit your first pull request. </p>
               <div class="learn-more mb-3">Watch it now!</div>
             </div>
           </div>
@@ -120,7 +121,7 @@
   </div>
   <div class="row pb-2">
     <div class="col col-12">
-      <a class="card mb-3" href="https://youtu.be/lWhPwDYeuhc" target="_blank">
+      <a class="card mb-3" href="https://youtu.be/tFfiXhckd7g" target="_blank">
         <div class="row">
           <div class="col-md-4 card-image" style="background-image: url('/img/home/video-thumbnail-o3de-editor-tour.jpg')"></div>
           <div class="col col-md-8">
