--- a/layouts/partials/contribute/sigs.html
+++ b/layouts/partials/contribute/sigs.html
@@ -1,7 +1,7 @@
 {{ $title := site.Title }}
 {{ $desc  := site.Params.description | markdownify }}
 <div class="contribute-sigs">
-    <a href="#" class="card sig-card">
+    <a href="https://github.com/o3de/sig-build" class="card sig-card">
       SIG-Build
     </a>
     <a href="https://github.com/o3de/sig-content" class="card sig-card">
