add meta tags to baseof.html
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,8 +9,7 @@
     </title>
     {{ partial "css.html" . }}
     {{ partial "favicon.html" . }}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    {{ partial "meta-tags.html" . }}
   </head>
   {{ partial "javascript.html" }}
     <body>
