Removed a typo on the home page.
Signed-off-by: Mike Cronin <mikecro@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -6,7 +6,7 @@
         <div class="row">
           <div class="features-text col col-12 col-lg-7 offset-lg-5">
             <h2>Create AAA games and high-fidelity simulations</h2>
-            <p>O3DE has been developed with with cutting-edge, real-time graphics and complex interactions in mind. 
+            <p>O3DE has been developed with cutting-edge, real-time graphics and complex interactions in mind. 
               Create robust, engaging experiences with O3DE's multi-threaded photorealistic renderer, extensible 3D content editor,
                 data-driven character animation system, real-time physics engine, and access to a growing open source community. </p>
           </div>
