--- a/layouts/partials/meta-tags.html
+++ b/layouts/partials/meta-tags.html
@@ -1,18 +1,21 @@
+{{ $logo   := site.Params.logos.og_image }}
+{{ $url := printf "img/logos/%s" $logo | absURL }}
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Primary Meta Tags -->
 <meta name="title" content="O3DE{{ if .Params.Title }}: {{ .Params.Title }} {{ end }}">
-<meta name="description" content="{{ if .Params.Summary }}{{ .Params.Summary }} {{ else }}{{ .Site.Params.description }} {{ end }} ">
+<meta name="description" content="{{ if .Description }}{{ .Description | truncate 20 }}{{ else }}{{ .Site.Params.description | markdownify | truncate 20 }}{{ end }}">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:title" content="O3DE{{ if .Params.Title }}: {{ .Params.Title }} {{ end }}">
-<meta property="og:description" content="{{ if .Params.Summary }}{{ .Params.Summary }} {{ else }}{{ .Site.Params.description }} {{ end }}">
-<meta property="og:image" content="img/logos/O3DE-Circle-Icon.svg">
+<meta property="og:description" content="{{ if .Description }}{{ .Description | truncate 20 }}{{ else }}{{ .Site.Params.description | markdownify | truncate 20 }}{{ end }}">
+<meta property="og:image" content="{{ $url }}">
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:card" content="summary">
 <meta property="twitter:url" content="{{ .Permalink }}">
 <meta property="twitter:title" content="O3DE{{ if .Params.Title }}: {{ .Params.Title }} {{ end }}">
-<meta property="twitter:description" content="{{ if .Params.Summary }}{{ .Params.Summary }} {{ else }}{{ .Site.Params.description }} {{ end }}">
-<meta property="twitter:image"content="img/logos/O3DE-Circle-Icon.svg">
+<meta property="twitter:description" content="{{ if .Description }}{{ .Description | truncate 20 }}{{ else }}{{ .Site.Params.description | markdownify | truncate 20 }}{{ end }}">
+<meta property="twitter:image" content="{{ $url }}">
