search icon accessible to different browsers

--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -6,7 +6,7 @@
         placeholder="Search site">
     </div> 
 
-    <div class="col-3 px-1 d-flex align-items-center justify-content-center">
+    <div class="col-3 px-1 pt-2">
         <input type="image" src="/img/home/Search.svg" alt="submit" value="search" id="nav-search">
     </div>
 </form>
