OS buttons in download page created

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -371,6 +371,29 @@ $width: '59vw';
   &:hover 
     background-color: darken(#1E71EB, 10%)
 
+.download-os-button
+  color: #000000
+  background-color: #EEEEEE
+  border-radius: 0 
+  padding: 0.5rem 0
+  &:hover
+    color: #000000
+    background-color: #E8E8E8
+
+.download-os.active a.download-os-button
+  color: #000000
+  background-color: #FFFFFF
+  &:hover
+    color: #000000
+    background-color: #F8F8F8
+
+
+
+.download-os.active div
+  background-color: #1E70EB
+  padding-bottom: 3px
+
+
 // layouts/partials/home/features.html 
 
 .features-outer
