Update Niantic partner logo to latest.
Signed-off-by: Stephen Tramer <169061+sptramer@users.noreply.github.com>

--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -7,7 +7,7 @@
       <img src="/img/logos/partnerLogos/aws.svg" class="aws-logo">
       <img src="/img/logos/partnerLogos/huawei.svg" class="huawei-logo">
       <img src="/img/logos/partnerLogos/intel.svg" class="intel-logo">
-      <img src="/img/logos/partnerLogos/niantic.svg" class="niantic-logo">
+      <img src="/img/logos/partnerLogos/niantic.png" class="niantic-logo">
     </div>
   </div>
 </section>
