download page os data view modification

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -387,11 +387,12 @@ $width: '59vw';
     color: #000000
     background-color: #F8F8F8
 
-
-
 .download-os.active div
   background-color: #1E70EB
   padding-bottom: 3px
+
+#download-page-buttons a.disabled
+  background-color: #007bff78
 
 
 // layouts/partials/home/features.html 
