Update CSS to size new Huawei logo correctly.
Signed-off-by: Stephen Tramer <stramer@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -493,6 +493,9 @@ $width: '59vw';
     height: 86px;
     padding: 5px 0
 
+  .huawei-logo
+    height: 60px;
+
 
 //layouts/partials/home/get-started.html
 
