--- a/layouts/partials/home/download.html
+++ b/layouts/partials/home/download.html
@@ -4,7 +4,7 @@
       <h2>Download Open 3D Engine now!</h2>
       <h5 class="mt-2 mb-2">Interesting in kicking the tires? Fork and build O3DE from our GitHub repo!</h5>
       <p class="buttons">
-        <a href="https://github.com/o3de/o3de/tree/main" class="my-3 mr-3 btn text-white download-btn btn-lg">O3DE on GitHub</a>
+        <a href="/download" class="my-3 mr-3 btn text-white download-btn btn-lg">Download O3DE</a>
       </p>
   </div>
 </section>
