--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -16,20 +16,20 @@
       </div>
     </div>
     <div class="row justify-content-between">
-      <div class="col col-4 download-os">
-        <a href="https://github.com/o3de/o3de" class="btn-block btn-lg text-center download-page-windows download-os-button" target="_blank">
+      <div class="col col-4 download-os active">
+        <a class="btn-block btn-lg text-center download-page-windows download-os-button">
           Windows
         </a>
         <div></div>
       </div>
-      <div class="col col-4 download-os active">
-        <a href="https://github.com/o3de/o3de" class="btn-block btn-lg text-center download-page-macos download-os-button" target="_blank">
+      <div class="col col-4 download-os">
+        <a class="btn-block btn-lg text-center download-page-macos download-os-button">
           macOS
         </a>
         <div></div>
       </div>
       <div class="col col-4 download-os">
-        <a href="https://github.com/o3de/o3de" class="btn-block btn-lg text-center download-page-linux download-os-button" target="_blank">
+        <a class="btn-block btn-lg text-center download-page-linux download-os-button">
           Linux
         </a>
         <div></div>
