fixed code review comments

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -379,6 +379,7 @@ $width: '59vw';
   &:hover
     color: #000000
     background-color: #E8E8E8
+    cursor: pointer
 
 .download-os.active a.download-os-button
   color: #000000
