--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,10 +1,11 @@
 {{ $home   := site.BaseURL }}
-{{ $here   := .RelPermalink }}
 {{ $title  := site.Title }}
 {{ $logo   := site.Params.logos.navbar }}
 {{ $menu   := site.Menus.main }}
+{{ $isDocs := in .RelPermalink "/docs/" }}
 
-<div class="main-navbar navbar navbar-dark navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
+{{ if $isDocs }}
+<div class="main-navbar navbar navbar-dark navbar-docs navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
   <div class="container-fluid d-flex flex-row justify-content-between">
       <div class="navbar-brand">
         <a class="navbar-item" href="{{ $home }}">
@@ -12,24 +13,51 @@
           {{ $url := printf "img/logos/%s" $logo | relURL }}
             <img src="{{ $url }}" class="navbar-logo">
           {{ else }}
-          {{ $title }}
+            {{ $title }}
           {{ end }}
+          <span class="subTitle">LEARN</span>
         </a>
       </div>
-  
+
       <div class="d-flex flex-row align-items-center">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
     
         <div class="collapse navbar-collapse" id="main-nav">
-          {{ partial "menu-loop.html" . }}
+          {{ partial "docs-menu-loop.html" . }}
         </div>  
-    
-        <div class="search">
-          {{ partial "search.html" . }}
-        </div>
-       
       </div>  
   </div> 
 </div>
+{{ else }}
+  <div class="main-navbar navbar navbar-dark navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
+    <div class="container-fluid d-flex flex-row justify-content-between">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="{{ $home }}">
+            {{ if $logo }}
+            {{ $url := printf "img/logos/%s" $logo | relURL }}
+              <img src="{{ $url }}" class="navbar-logo">
+            {{ else }}
+            {{ $title }}
+            {{ end }}
+          </a>
+        </div>
+
+        <div class="d-flex flex-row align-items-center">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      
+          <div class="collapse navbar-collapse" id="main-nav">
+            {{ partial "menu-loop.html" . }}
+          </div>  
+      
+          <div class="search">
+            {{ partial "search.html" . }}
+          </div>
+        
+        </div>  
+    </div> 
+  </div>
+{{ end }}
