--- a/layouts/docs/section.html
+++ b/layouts/docs/section.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="container-fluid">
       <section class="row flex-xl-nowrap">
-        <section class="col d-none d-md-block col-xl-5 docs-sidebar p-0">
+        <section class="col d-none d-md-block col-xl-5 docs-sidebar">
           {{ partial "section-nav.html" . }}
         </section>
         <section class="col docs-content pt-3 px-5 pb-3">
