--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
   <div class="container-fluid">
       <section class="row flex">
-        <section class="col-12 col-md-12 col-xl-2 docs-sidebar p-0 order-2 order-xl-1">
+        <section class="col-12 col-md-12 col-xl-3 docs-sidebar order-2 order-xl-1">
           {{ partial "section-nav.html" . }}
         </section>
-        <section class="col-12 col-md-12 col-xl-10 docs-content pt-3 px-5 pb-3 order-1 order-xl-2">
+        <section class="col-12 col-md-12 col-xl-9 docs-content pt-3 px-5 pb-3 order-1 order-xl-2">
           <div class="row">
             <div class="col-12 col-md-12 col-xl-12 order-1 order-xl-1">
             {{ partial "single-header.html" . }}
