--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -5,7 +5,7 @@
 {{ $isDocs := in .RelPermalink "/docs/" }}
 
 {{ if $isDocs }}
-<div class="main-navbar navbar navbar-dark navbar-docs navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
+<div class="main-navbar navbar navbar-dark navbar-docs sticky-top" role="navigation" aria-label="main navigation">
   <div class="container-fluid d-flex flex-row justify-content-between">
       <div class="navbar-brand">
         <a class="navbar-item" href="{{ $home }}">
@@ -19,15 +19,23 @@
         </a>
       </div>
 
-      <div class="d-flex flex-row align-items-center">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="d-flex flex-row align-items-center navbar-docs">
+        <div id="main-nav" class="navbar-primary">
+          {{ partial "docs-menu-loop.html" . }}
+        </div>
+
+        <button class="navbar-toggler secondary-toggler" type="button" data-toggle="collapse" data-target="#secondary-nav" aria-controls="secondary-nav" aria-expanded="false" aria-label="Toggle secondary navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-    
-        <div class="collapse navbar-collapse" id="main-nav">
-          {{ partial "docs-menu-loop.html" . }}
-        </div>  
-      </div>  
+
+        <div class="collapse navbar-collapse navbar-secondary" id="secondary-nav">
+          {{ partial "docs-secondary-menu-loop.html" . }}
+        </div>
+        
+        <div id="mobile-docs-toggler" class="mobile-docs-toggler">
+          <span class="navbar-toggler-icon"></span>
+        </div>
+      </div>
   </div> 
 </div>
 {{ else }}
