--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,12 +1,12 @@
 <form id="search"
-    action='{{ with .GetPage "/search" }}{{.Permalink}}{{end}}' method="get" class="d-flex align-items-center justify-content-center">
-    <div class="col px-1 search-input-view hide-content">
+    action='{{ with .GetPage "/search" }}{{.Permalink}}{{end}}' method="get" class="d-flex align-items-center justify-content-center pl-2">
+    <div class="search-input-view hide-content">
         <label hidden for="search-input">Search site</label>
         <input type="text" id="search-input" class="form-control form-control-sm" name="query"
         placeholder="Search site">
     </div> 
 
-    <div class="col-3 px-1 pt-2">
+    <div class="pt-2">
         <input type="image" src="/img/home/Search.svg" alt="submit" value="search" id="nav-search">
     </div>
 </form>
