--- a/layouts/partials/section-nav-walk.html
+++ b/layouts/partials/section-nav-walk.html
@@ -8,11 +8,13 @@
             {{ .LinkTitle }}</a>
             {{ if .Pages }}
                 <ul>
+                    {{ if .IsSection }}
                     <li>
                         <a href="{{ .RelPermalink }}"
                         class="docs-link">
                         {{ .LinkTitle }}</a>
                     </li>
+                    {{ end }}
                     {{ partial "section-nav-walk.html" . }}
                 </ul>
             {{ end }}
